--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js",
+    "lint": "eslint src/**/*.ts",
     "test": "jest",
     "test:watch": "jest --watch"
   },
