--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.3.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "*"
